// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownRender node e2e coverage > renders admonition node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="admonition">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <div data-v-c8910e11="" class="admonition admonition-stable">
          <!-- Legend-style title that sits on the border -->
          <div data-v-c8910e11="" id="admonition-stable" class="admonition-stable">
            <!-- SVG icons per type --><svg data-v-c8910e11="" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="admonition-stable">
              <path data-v-c8910e11="" d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path>
              <path data-v-c8910e11="" d="M12 9v4"></path>
              <path data-v-c8910e11="" d="M12 17h.01"></path>
            </svg><span data-v-c8910e11="" class="admonition-stable">Warning</span>
            <!--v-if-->
          </div>
          <div data-v-c8910e11="" id="admonition-stable-content" class="admonition-stable" aria-labelledby="admonition-stable">
            <div data-v-8dfe8a80="" data-v-c8910e11="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="admonition-stable-renderer-0-0-0"><span data-v-a84b8095="">Admonition content</span><span data-v-a84b8095=""></span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders blockquote node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="blockquote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <blockquote data-v-8ae59609="" class="blockquote blockquote-node" dir="auto" is-dark="false">
          <p data-v-8ae59609="" dir="auto" class="paragraph-node"><span data-v-a84b8095="" class="text-node" index-key="blockquote-markdown-renderer-0-paragraph-0"><span data-v-a84b8095="">Blockquote rendered content.</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </p>
        </blockquote>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders checkbox nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" class="list-node list-disc">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" role="img" aria-label="checked" index-key="list-item-markdown-renderer-0-0-0-0"><!-- Unchecked --><!-- Checked --><svg data-v-31e4c290="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" class="checkbox-icon checkbox-checked"><rect data-v-31e4c290="" x="3" y="3" width="18" height="18" rx="4" fill="currentColor"></rect><path data-v-31e4c290="" d="M9 12l2 2 4-4" stroke="hsl(var(--ms-background))" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></span>
                      <!----><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="list-item-markdown-renderer-0-0-0-2"><span data-v-a84b8095=""> Completed task</span><span data-v-a84b8095=""></span>
                      <!--v-if--></span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" role="img" aria-label="unchecked" index-key="list-item-markdown-renderer-0-1-0-0"><!-- Unchecked --><svg data-v-31e4c290="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" class="checkbox-icon checkbox-unchecked"><rect data-v-31e4c290="" x="3" y="3" width="18" height="18" rx="4" stroke="currentColor" stroke-width="2"></rect></svg></span>
                      <!----><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="list-item-markdown-renderer-0-1-0-2"><span data-v-a84b8095=""> Pending task</span><span data-v-a84b8095=""></span>
                      <!--v-if--></span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders code block node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="code_block">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <div data-v-8dfe8a80="" style="--markstream-code-fallback-bg: #ffffff; --markstream-code-fallback-fg: #393a34; --markstream-code-theme-bg: #ffffff; --markstream-code-theme-fg: #393a34; --markstream-code-theme-line-number: #393a3450; --markstream-diff-added-line-fill: color-mix(in lab, #ffffff 88%, #1e754f); --markstream-diff-added-number-fill: color-mix(in lab, #ffffff 91%, #1e754f); --markstream-diff-editor-bg: #ffffff; --markstream-diff-removed-line-fill: color-mix(in lab, #ffffff 88%, #ab5959); --markstream-diff-removed-number-fill: color-mix(in lab, #ffffff 91%, #ab5959); --markstream-diff-shell-bg: #ffffff; --markstream-pre-resolved-theme-bg: #ffffff; --markstream-pre-resolved-theme-fg: #393a34; --markstream-pre-resolved-theme-line-number: #393a3450; background-color: rgb(255, 255, 255); color: rgb(57, 58, 52);" class="code-block-container rounded-lg border">
        <!-- Header -->
        <div class="code-block-header flex justify-between items-center border-b px-[var(--ms-inset-panel-x)] py-[var(--ms-inset-panel-y)] border-[var(--code-border)] bg-[var(--code-header-bg)] text-[var(--code-fg)]">
          <!-- left: language icon + title (provided by parent via slot) -->
          <div class="code-header-main"><span class="icon-slot h-4 w-4 flex-shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 16 16"><path fill="#0288d1" d="M2 2v12h12V2zm4 6h3v1H8v4H7V9H6zm5 0h2v1h-2v1h1a1.003 1.003 0 0 1 1 1v1a1.003 1.003 0 0 1-1 1h-2v-1h2v-1h-1a1.003 1.003 0 0 1-1-1V9a1.003 1.003 0 0 1 1-1"></path></svg></span>
            <div class="code-header-copy">
              <div class="code-header-title">TypeScript</div>
              <!--v-if-->
            </div>
          </div><!-- right: action buttons -->
          <div class="flex items-center gap-0.5">
            <!-- Diff stats (optional) -->
            <!--v-if-->
            <!-- Copy (primary action — always visible) --><button type="button" class="code-action-btn inline-flex items-center justify-center p-[var(--ms-action-btn-padding)] rounded leading-none shrink-0 cursor-pointer text-[var(--code-action-fg)] hover:bg-[var(--code-action-hover-bg)] hover:text-[var(--code-action-hover-fg)] active:scale-[0.96] disabled:opacity-40 disabled:cursor-not-allowed transition-colors" aria-label="Copy"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="1em" height="1em" viewBox="0 0 24 24" class="action-icon">
                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                  <rect width="14" height="14" x="8" y="8" rx="2" ry="2"></rect>
                  <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"></path>
                </g>
              </svg></button><!-- Collapse (structural — always visible) -->
            <!--v-if-->
            <!-- More menu (overflow for secondary actions) -->
            <!--v-if-->
          </div>
        </div><!-- Content: keep slot subtree mounted so stream-diffs/renderer state survives collapse. -->
        <div class="code-block-shell-content"><pre style="--markstream-pre-line-number-width: 2ch; --markstream-pre-diff-line-number-width: 2ch; --markstream-code-padding-left: calc(var(--markstream-pre-line-number-padding-left, 2ch) + var(--markstream-pre-line-number-width, 2ch) + var(--markstream-pre-line-number-padding-right, 1ch) + var(--markstream-pre-line-number-separator-width, 2px) + var(--markstream-pre-line-number-gap-to-code, 1ch)); --markstream-code-font-family: &quot;SF Mono&quot;, Monaco, Consolas, &quot;Ubuntu Mono&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace; --markstream-code-padding-x: 1ch; --markstream-code-padding-y: 8px; --markstream-code-padding-bottom: 8px; --markstream-code-scrollbar-gutter: 6px; --markstream-code-tab-size: 4; --markstream-pre-line-number-top: 8px; --markstream-pre-line-number-left: 0px; --markstream-pre-line-number-padding-left: 2ch; --markstream-pre-line-number-padding-right: 1ch; --markstream-pre-line-number-separator-width: 2px; --markstream-code-theme-bg: #ffffff; --markstream-code-theme-fg: #393a34; --markstream-code-theme-line-number: #393a3450; --markstream-diff-added-line-fill: color-mix(in lab, #ffffff 88%, #1e754f); --markstream-diff-added-number-fill: color-mix(in lab, #ffffff 91%, #1e754f); --markstream-diff-metadata-bg: #ffffff; --markstream-diff-metadata-fg: #393a3450; --markstream-diff-removed-line-fill: color-mix(in lab, #ffffff 88%, #ab5959); --markstream-diff-removed-number-fill: color-mix(in lab, #ffffff 91%, #ab5959); --markstream-pre-resolved-theme-bg: #ffffff; --markstream-pre-resolved-theme-fg: #393a34; --markstream-pre-resolved-theme-line-number: #393a3450; --markstream-pre-line-number-gap-to-code: 1ch; --markstream-diff-fallback-handoff-height: auto; background-color: var(--markstream-code-fallback-bg, var(--markstream-code-theme-bg, var(--markstream-pre-resolved-theme-bg))); box-sizing: border-box; color: var(--markstream-code-fallback-fg, var(--markstream-code-theme-fg, var(--markstream-pre-resolved-theme-fg))); font-family: &quot;SF Mono&quot;, Monaco, Consolas, &quot;Ubuntu Mono&quot;, &quot;Liberation Mono&quot;, &quot;Courier New&quot;, monospace; font-size: 12px; line-height: 18px; margin: 0px; max-height: 500px; overflow: auto; overflow-x: hidden; overflow-y: auto; padding: 8px 1ch 8px var(--markstream-code-padding-left); scrollbar-gutter: stable; tab-size: 4; white-space: pre-wrap; overflow-wrap: anywhere; word-break: normal; width: 100%;" class="language-ts markstream-pre--line-numbers code-pre-fallback is-wrap" aria-busy="false" aria-label="Code block: ts" data-language="ts" data-markstream-line-numbers="1" data-markstream-pre="1" tabindex="0" index-key="markdown-renderer-0" data-markstream-code-theme="vitesse-light"><code translate="no" class="markstream-pre__code markstream-pre__code--wrapped"><span class="markstream-pre__logical-line" data-line-number="1">export const sum = (a: number, b: number) =&gt; a + b</span></code></pre>
        </div><!-- Loading skeleton -->
        <div class="code-loading-placeholder" style="display: none;">
          <div class="loading-skeleton">
            <div class="skeleton-line"></div>
            <div class="skeleton-line"></div>
            <div class="skeleton-line short"></div>
          </div>
        </div><!-- Screen reader copy status --><span class="sr-only" aria-live="polite" role="status"></span>
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders complex inline code with emphasis and multiple code spans 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" class="list-node list-decimal">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="1">
            <p data-v-d94d2511="" dir="auto" class="paragraph-node"><strong data-v-b1e65240="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-0-0"><span data-v-a84b8095="">整合冗余条款：</span><span data-v-a84b8095=""></span><!--v-if--></span></strong><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-1"><span data-v-a84b8095=""> 将原</span><span data-v-a84b8095=""></span>
              <!--v-if--></span><code data-v-36040df8="" class="inline-code" index-key="list-item-markdown-renderer-0-0-paragraph-2"><span data-v-36040df8="">1-(5)</span><!--v-if--></code><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-3"><span data-v-a84b8095="">、</span><span data-v-a84b8095=""></span>
              <!--v-if--></span><code data-v-36040df8="" class="inline-code" index-key="list-item-markdown-renderer-0-0-paragraph-4"><span data-v-36040df8="">3-(3)</span><!--v-if--></code><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-5"><span data-v-a84b8095="">、</span><span data-v-a84b8095=""></span>
              <!--v-if--></span><code data-v-36040df8="" class="inline-code" index-key="list-item-markdown-renderer-0-0-paragraph-6"><span data-v-36040df8="">3-(4)</span><!--v-if--></code><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-7"><span data-v-a84b8095="">中关于“缴纳费用”和“告知法律状态变化”的核心义务合并，统一放入</span><span data-v-a84b8095=""></span>
              <!--v-if--></span><code data-v-36040df8="" class="inline-code" index-key="list-item-markdown-renderer-0-0-paragraph-8"><span data-v-36040df8="">1-(4)</span><!--v-if--></code><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-9"><span data-v-a84b8095="">“法律状态维护与通知义务”中，使其逻辑更集中，避免了在不同部分重复提及相似义务。</span><span data-v-a84b8095=""></span>
              <!--v-if--></span>
            </p>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders definition list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="definition_list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <dl data-v-084c0831="" class="definition-list" is-dark="false">
          <dt data-v-084c0831="" class="definition-term">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true"><span data-v-a84b8095="" class="text-node" index-key="definition-term-markdown-renderer-0-0-0" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="">Term</span><span data-v-a84b8095=""></span>
                    <!--v-if--></span>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </dt>
          <dd data-v-084c0831="" class="definition-desc">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="definition-desc-markdown-renderer-0-0-0-0"><span data-v-a84b8095="">Definition details</span><span data-v-a84b8095=""></span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </dd>
        </dl>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emoji node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Smile with </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><span data-v-b001e831="" data-v-93ee5c2d="" class="emoji-node" index-key="markdown-renderer-0-1">😄</span><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> emoji.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emphasis node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><em data-v-ca49685e="" data-v-93ee5c2d="" class="emphasis-node"><span data-v-a84b8095="" data-v-ca49685e="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">italic text</span><span data-v-a84b8095=""></span><!--v-if--></span></em><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">A footnote reference</span><span data-v-a84b8095=""></span>
          <!--v-if--></span><sup data-v-ba0412bc="" data-v-93ee5c2d="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0-1"><span data-v-ba0412bc="" href="#fnref--1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="footnote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <div id="fnref--1" class="footnote-node flex text-sm leading-relaxed border-t border-[var(--footnote-border)] pt-2" is-dark="false">
          <!-- <span class="font-semibold mr-2 text-[#0366d6]">[{{ node.id }}]</span> -->
          <div class="flex-1">
            <div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
                  <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="footnote-markdown-renderer-1-0-0"><span data-v-a84b8095="">Footnote explanation</span><span data-v-a84b8095=""></span>
                      <!--v-if--></span><a data-v-31914872="" data-v-93ee5c2d="" class="footnote-anchor text-sm hover:underline cursor-pointer" href="#fnref-1" title="返回引用 1" index-key="footnote-markdown-renderer-1-0-1"> ↩︎ </a>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="footnote_reference">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true"><sup data-v-ba0412bc="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0" typewriter="false" fade="true" is-dark="false"><span data-v-ba0412bc="" href="#fnref--1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup></transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders hardbreak node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Line one</span><span data-v-a84b8095=""></span>
          <!--v-if--></span><br data-v-2587360c="" data-v-93ee5c2d="" class="hard-break" index-key="markdown-renderer-0-1"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">Line two</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders heading node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="heading">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <h1 data-v-9f883140="" class="heading-node heading-1" dir="auto" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-9f883140="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Heading Node Title</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </h1>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders highlight node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Use </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><mark data-v-9bc40b1b="" data-v-93ee5c2d="" class="highlight-node"><span data-v-a84b8095="" data-v-9bc40b1b="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">highlighted text</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </mark><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> for emphasis.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders image links with relative target stay inline 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="https://www.npmjs.com/package/markstream-vue" title="" aria-label="Link: https://www.npmjs.com/package/markstream-vue" aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-4ff2ac62="" data-v-994bfd08="" class="image-node-container" index-key="markdown-renderer-0-0-0"><img data-v-4ff2ac62="" alt="NPM version" title="NPM version" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="NPM version" src="https://img.shields.io/npm/v/markstream-vue?color=a1b858&amp;label="><!--v-if--><!--v-if--><!--v-if--></span></a> <a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="README.zh-CN.md" title="" aria-label="Link: README.zh-CN.md" aria-hidden="false" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-4ff2ac62="" data-v-994bfd08="" class="image-node-container" index-key="markdown-renderer-0-2-0"><img data-v-4ff2ac62="" alt="中文版" title="中文版" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="中文版" src="https://img.shields.io/badge/docs-%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3-blue"><!--v-if--><!--v-if--><!--v-if--></span></a></p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders image node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-4ff2ac62="" data-v-93ee5c2d="" class="image-node-container" index-key="markdown-renderer-0-0"><img data-v-4ff2ac62="" alt="Vue Logo" title="Vue Logo" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="Vue Logo" src="https://example.com/vue.png"><!--v-if--><!--v-if--><!--v-if--></span></p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders inline code node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Here is </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="markdown-renderer-0-1"><span data-v-36040df8="">const answer = 42</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> inline.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders insert node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Here comes </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><ins data-v-1e673445="" data-v-93ee5c2d="" class="insert-node"><span data-v-a84b8095="" data-v-1e673445="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">inserted text</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </ins><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> in the paragraph.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders link node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Visit </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="https://vuejs.org" title="" aria-label="Link: https://vuejs.org" aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-a84b8095="" data-v-994bfd08="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">Vue</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </a><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> now.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders math inline node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Einstein wrote </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-1"><span data-v-a84b8095="">$E=mc^2$</span><span data-v-a84b8095=""></span>
          <!--v-if--></span><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders ordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" class="list-node list-decimal">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="1">
            <p data-v-d94d2511="" dir="auto" class="paragraph-node"><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-0"><span data-v-a84b8095="">First entry</span><span data-v-a84b8095=""></span>
              <!--v-if--></span>
            </p>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="2">
            <p data-v-d94d2511="" dir="auto" class="paragraph-node"><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-1-paragraph-0"><span data-v-a84b8095="">Second entry</span><span data-v-a84b8095=""></span>
              <!--v-if--></span>
            </p>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders paragraph and text node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Simple paragraph content rendered as plain text.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Cite research </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><span data-v-7c86ecd2="" data-v-93ee5c2d="" class="reference-node cursor-pointer text-xs rounded-md px-1.5 mx-0.5" role="button" tabindex="0" data-reference-id="1" data-markstream-reference-id="1" index-key="markdown-renderer-0-1">1</span><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> for details.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders single badge image with trailing newline stays inline 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-4ff2ac62="" data-v-93ee5c2d="" class="image-node-container" index-key="markdown-renderer-0-0"><img data-v-4ff2ac62="" alt="License" title="License" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="License" src="https://img.shields.io/npm/l/markstream-vue"><!--v-if--><!--v-if--><!--v-if--></span></p>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strikethrough node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><del data-v-d7c2e36d="" data-v-93ee5c2d="" class="strikethrough-node"><span data-v-a84b8095="" data-v-d7c2e36d="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">deleted text</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </del><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strong node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span><span data-v-a84b8095=""></span>
          <!--v-if--></span><strong data-v-b1e65240="" data-v-93ee5c2d="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">bold text</span><span data-v-a84b8095=""></span><!--v-if--></span></strong><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders subscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Chemical formula H</span><span data-v-a84b8095=""></span>
          <!--v-if--></span><sub data-v-40ad1ac6="" data-v-93ee5c2d="" class="subscript-node"><span data-v-a84b8095="" data-v-40ad1ac6="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">2</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </sub><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">O is familiar.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders superscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Math uses x</span><span data-v-a84b8095=""></span>
          <!--v-if--></span><sup data-v-9c4a3c09="" data-v-93ee5c2d="" class="superscript-node"><span data-v-a84b8095="" data-v-9c4a3c09="" class="text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">2</span><span data-v-a84b8095=""></span>
            <!--v-if--></span>
          </sup><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> frequently.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders table node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="table">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <div data-v-8fb37ab3="" class="table-node-wrapper" loading="false">
          <table data-v-8fb37ab3="" class="table-node" aria-busy="false">
            <!--v-if-->
            <thead data-v-8fb37ab3="">
              <tr data-v-8fb37ab3="">
                <th data-v-8fb37ab3="" dir="auto" class="text-left"><span data-v-a84b8095="" class="text-node" index-key="table-th-markdown-renderer-0-0-0"><span data-v-a84b8095="">Name</span><span data-v-a84b8095=""></span>
                  <!--v-if--></span><button data-v-8fb37ab3="" type="button" class="table-node__resize-handle" aria-label="Resize columns 1 and 2"></button>
                </th>
                <th data-v-8fb37ab3="" dir="auto" class="text-left"><span data-v-a84b8095="" class="text-node" index-key="table-th-markdown-renderer-0-1-0"><span data-v-a84b8095="">Role</span><span data-v-a84b8095=""></span>
                  <!--v-if--></span>
                  <!--v-if-->
                </th>
              </tr>
            </thead>
            <tbody data-v-8fb37ab3="">
              <tr data-v-8fb37ab3="">
                <td data-v-8fb37ab3="" class="text-left" dir="auto"><span data-v-a84b8095="" class="text-node" index-key="table-td-markdown-renderer-0-0-0-0"><span data-v-a84b8095="">Alice</span><span data-v-a84b8095=""></span>
                  <!--v-if--></span>
                </td>
                <td data-v-8fb37ab3="" class="text-left" dir="auto"><span data-v-a84b8095="" class="text-node" index-key="table-td-markdown-renderer-0-0-1-0"><span data-v-a84b8095="">Developer</span><span data-v-a84b8095=""></span>
                  <!--v-if--></span>
                </td>
              </tr>
            </tbody>
          </table>
          <transition-stub data-v-8fb37ab3="" name="table-node-fade" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders thematic break node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">First section.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="thematic_break">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <hr data-v-18e4f209="" class="hr-node" node="[object Object]" index-key="markdown-renderer-1" typewriter="false" fade="true" is-dark="false">
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="2" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" dir="auto" class="paragraph-node" typewriter="false" fade="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="text-node" index-key="markdown-renderer-2-0"><span data-v-a84b8095="">Second section.</span><span data-v-a84b8095=""></span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders unordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching stream-diffs internals -->
      <transition-stub data-v-8dfe8a80="" name="fade" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" class="list-node list-disc">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <p data-v-d94d2511="" dir="auto" class="paragraph-node"><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-0-paragraph-0"><span data-v-a84b8095="">Item one</span><span data-v-a84b8095=""></span>
              <!--v-if--></span>
            </p>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <p data-v-d94d2511="" dir="auto" class="paragraph-node"><span data-v-a84b8095="" class="text-node" index-key="list-item-markdown-renderer-0-1-paragraph-0"><span data-v-a84b8095="">Item two</span><span data-v-a84b8095=""></span>
              <!--v-if--></span>
            </p>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
